Added PDF for Spark

--- a/Big-Data-With-Azure-And-AWS-Cloud-Mastery-Program/03-Spark/04-spark_table.ipynb
+++ b/Big-Data-With-Azure-And-AWS-Cloud-Mastery-Program/03-Spark/04-spark_table.ipynb
@@ -625,6 +625,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2c41f34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.sql(\"DROP TABLE IF EXISTS customer\")\n",
+    "spark.sql('show tables').show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1a471b4c",
    "metadata": {},
@@ -787,28 +798,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# **After dropping the external table**\n",
-    "\n",
-    "**Path:** `/user/hive/warehouse/customer/part-00000-41449e73-7692-40cc-986d-729e1a7a662f-c000.csv`\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Directory Content\n",
-    "\n",
-    "| Permission | Owner | Group | Size       | Last Modified | Replication | Block Size | Name                                             |\n",
-    "|------------|-------|-------|------------|---------------|-------------|------------|-------------------------------------------------|\n",
-    "| -rw-r--r-- | root  | hadoop| 0 B        | Feb 22 11:50  | 2           | 128 MB     | _SUCCESS                                        |\n",
-    "| -rw-r--r-- | root  | hadoop| 155.87 MB  | Feb 22 11:50  | 2           | 128 MB     | part-00000-41449e73-7692-40cc-986d-729e1a7a662f-c000.csv |\n",
-    "| -rw-r--r-- | root  | hadoop| 155.42 MB  | Feb 22 11:50  | 2           | 128 MB     | part-00001-41449e73-7692-40cc-986d-729e1a7a662f-c000.csv |\n",
-    "| -rw-r--r-- | root  | hadoop| 86.71 MB   | Feb 22 11:50  | 2           | 128 MB     | part-00002-41449e73-7692-40cc-986d-729e1a7a662f-c000.csv |\n",
-    "\n",
-    "**Note : Please image section for complete details refer to screenshots**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "803b3b18-67b8-4cd5-b9b8-1e3fb6bb0852",
@@ -828,8 +817,29 @@
    ],
    "source": [
     "spark.sql(\"DROP TABLE IF EXISTS customers_external\")\n",
-    "spark.sql(\"DROP TABLE IF EXISTS customer\")\n",
     "spark.sql('show tables').show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **After dropping the external table**\n",
+    "\n",
+    "**Path:** `/user/hive/warehouse/customer/part-00000-41449e73-7692-40cc-986d-729e1a7a662f-c000.csv`\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Directory Content\n",
+    "\n",
+    "| Permission | Owner | Group | Size       | Last Modified | Replication | Block Size | Name                                             |\n",
+    "|------------|-------|-------|------------|---------------|-------------|------------|-------------------------------------------------|\n",
+    "| -rw-r--r-- | root  | hadoop| 0 B        | Feb 22 11:50  | 2           | 128 MB     | _SUCCESS                                        |\n",
+    "| -rw-r--r-- | root  | hadoop| 155.87 MB  | Feb 22 11:50  | 2           | 128 MB     | part-00000-41449e73-7692-40cc-986d-729e1a7a662f-c000.csv |\n",
+    "| -rw-r--r-- | root  | hadoop| 155.42 MB  | Feb 22 11:50  | 2           | 128 MB     | part-00001-41449e73-7692-40cc-986d-729e1a7a662f-c000.csv |\n",
+    "| -rw-r--r-- | root  | hadoop| 86.71 MB   | Feb 22 11:50  | 2           | 128 MB     | part-00002-41449e73-7692-40cc-986d-729e1a7a662f-c000.csv |\n",
+    "\n",
+    "**Note : Please image section for complete details refer to screenshots**"
    ]
   },
   {
